# minishell-tester

./: .gitignore  .testignore  Cargo.toml  Containerfile  README.md  flake.nix  run-container.sh
src/: exec.rs  main.rs  parse.rs  test.rs  watch.rs
src/import/: emtran.rs  mod.rs  zstenger.rs
src/run/: exec.rs  mod.rs  parse.rs
src/tui/: mod.rs  popup.rs
