[package]
name = "maxitest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
colored = "3.0.0"
csv = "1.3.1"
rayon = "1.11.0"
regex = "1.11.2"
reqwest = { version = "0.12.23", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_repr = "0.1.20"
thiserror = "2.0.16"
url = "2.5.7"
